# construction-agent-bench

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: project_baseline.yaml
constructbench/: __init__.py  agents.py  analysis.py  assessment.py  baseline.py  cascade.py  checkpoints.py  claims.py  combined.py  config.py  decisions.py  enums.py  events.py  evidence.py  feasibility.py  focal.py  handoff.py  handoff_study.py  io.py  manifest.py  messages.py  metrics.py  models.py  observations.py  parser.py  payoffs.py  perturbations.py  projections.py  replay.py  reporting.py  response_curve.py  runner.py  runs.py  runtime.py  s01_v2_decision_summary_factorial.py  s01_v2_derived_state_packet.py  s01_v2_ladder.py  s01_v2_lineage.py  safety.py  scenario_instances.py  (+6 more)
docs/: about-construct-bench.md  constructbench_design_and_early_output_summary.md  constructbench_low_budget_transition_plan.md  constructbench_s01_marginal_update_spec.md  constructbench_stateful_build_plan_with_5_scenarios.md  experiment_registry.md  feedback_cascade_design.md  s01_distributed_threshold_handoff_results.md  s01_distributed_threshold_handoff_spec.md  s01_replaceability_response_curve_spec.md  s01_response_curve_sonnet_confirmation_protocol.md  s01_response_curve_sonnet_confirmation_results.md  s01_response_curve_threshold_scaffold_spec.md  s01_response_curve_trusted_threshold_spec.md  s01_v2_decision_summary_factorial_protocol.md  s01_v2_decision_summary_factorial_results.md  s01_v2_derived_state_packet_protocol.md  s01_v2_derived_state_packet_results.md  web_game_copy_edit_sheet.md  (+3 more)
(+156 files in other folders)
